--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "engines": {
+  "node": "16.x"
+},
   "browserslist": {
     "production": [
       ">0.2%",
